# OWO_GTAV

./: .gitignore  ConsoleLogger.cpp  ConsoleLogger.h  Debug.cpp  Debug.h  FeelDamage.cpp  FeelDamage.h  FeelDriving.cpp  FeelDriving.h  FeelRecoil.cpp  FeelRecoil.h  GTAInventory.cpp  GTAInventory.h  GTAPlayer.cpp  GTAPlayer.h  GTAVehicle.cpp  GTAVehicle.h  IntensityLerp.h  MockVehicle.cpp  MockVehicle.h  OWOGTAMOD.sln  OWOGTAVMOD.asi  OWOVehicle.h  PlayerBody.h  PlayerInventory.h  RCa19296  README.md  Resource.rc  SensationOfWeapons.cpp  SensationOfWeapons.h  SensationsCollection.cpp  SensationsCollection.h  TEMPLATE.vcxproj  TEMPLATE.vcxproj.filters  Vehicle.h  VehicleEngine.h  kjhsfdgkis.cpp  kjhsfdgkis.h  script.cpp  script.h  (+2 more)
OWOAPI/: CMakeLists.txt  ClientFactory.cpp  OWOAPI.vcxproj  OWOAPI.vcxproj.filters
OWOAPI/Controller/: Authenticate.cpp  Client.cpp  FindServer.cpp  NotifyAbscense.cpp  OWO.cpp  OWO.h  ScanAvailableServers.cpp  SecretKeysVault.cpp  SendAuthMessage.cpp  SendEncryptedMessage.cpp  SendSensation.cpp  StopSensation.cpp
OWOAPI/Domain/: BakedSensation.cpp  BakedSensationsParser.cpp  GameAuth.cpp  MicroSensationParser.cpp  Microsensation.cpp  Muscle.cpp  Muscle.h  MusclesGroup.cpp  MusclesGroup.h  MusclesParser.cpp  OWOTypes.h  SensationWithMuscles.cpp  SensationWithMusclesParser.cpp  SensationsBaker.cpp  SensationsFactory.cpp  SensationsParser.cpp  SensationsSequence.cpp  SensationsSequenceParser.cpp
OWOAPI/Infraestructure/: UDPNetwork.cpp
OWOAPI/toolchain/: linux.cmake
OWOGTAVTESTS/: AuthTests.cpp  DebugLoggerTests.cpp  FeelDrivingTests.cpp  (+13 more)
